# socket_message

./: README.md  socket_message.sql
socket_message_android/: settings.gradle  test.jks
socket_message_android/app/: build.gradle
socket_message_android/app/src/main/: AndroidManifest.xml
socket_message_android/app/src/main/cpp/: CMakeLists.txt  DataTypeUtils.cpp  DataTypeUtils.h  JniUtils.cpp  JniUtils.h  com_ifengbaobao_socket_message_android_SocketMessageAndroid.cpp  com_ifengbaobao_socket_message_android_SocketMessageAndroid.h
socket_message_android/app/src/main/java/com/ifengbaobao/socket_message_android/: MainActivity.java  SocketMessageAndroid.java
socket_message_android/app/src/main/res/layout/: activity_main.xml
socket_message_android/app/src/main/res/values/: strings.xml  themes.xml
socket_message_android/app/src/main/res/values-night/: themes.xml
socket_message_android/gradle/wrapper/: gradle-wrapper.properties
socket_message_client/: CMakeLists.txt
socket_message_client/include/: SocketMessageSdk.h  SocketMessageSdkDataType.h
socket_message_client/socket_message_client/: CMakeLists.txt  CharsetUtils.cpp  CharsetUtils.h  Main.cpp
socket_message_client/socket_message_sdk/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  DataType.h  Select.cpp  Select.h  SockeIncludeHead.h  SocketControl.cpp  SocketControl.h  SocketHead.cpp  SocketMessageSdk.cpp  SocketMessageSdkConfig.h  SocketMessageSdkInterface.cpp  SocketMessageSdkInterface.h  Utils.cpp  Utils.h
socket_message_server/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  Config.h  DBGroup.cpp  DBGroup.h  DBMsg.cpp  DBMsg.h  DBUser.cpp  DBUser.h  DataHandler.cpp  DataHandler.h  DataType.h  EPoll.cpp  EPoll.h  Logger.cpp  Logger.hpp  Main.cpp  MainControl.cpp  MainControl.h  MemoryHook.cpp  MemoryHook.h  MemoryMgr.cpp  MemoryMgr.h  MemoryPool.cpp  MemoryPool.h  MySql.cpp  MySql.h  MySqlPool.cpp  MySqlPool.h  ServerSocket.cpp  ServerSocket.h  SocketControl.cpp  SocketControl.h  SocketHead.h  ThreadPool.cpp  ThreadPool.h  Utils.cpp  Utils.h
